<resources>
    <string name="app_name">ShoeStoreInventory</string>
    <string name="shoes">Shoes</string>
    <string name="store_inventory">Store Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">next</string>
    <string name="get_started">Get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="register">Register</string>
    <string name="background">Background</string>
    <string name="instructions">instructions</string>
    <string name="shoe_image">shoe image</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="or">OR</string>
    <string name="choose_from_saved_photos">choose from saved photos</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description_optional">Description (optional)</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="list_item_image">list item image</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="welcome_image">welcome image</string>
    <string name="welcome">Welcome!</string>
    <string name="to_the_shoes_store_inventory_app">to the Shoes Store Inventory App</string>
    <string name="add_new_shoe">Add new shoe</string>
</resources>