<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- the layout orientation isn't concise so ConstraintLayout is required -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:id="@+id/iv_shoe_image"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/list_item_image"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_login_welcome" />

        <TextView
            android:id="@+id/tv_shoe_name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/_8density"
            android:layout_marginTop="@dimen/_18density"
            android:layout_marginEnd="@dimen/_8density"
            android:text="@string/shoe_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_25scaleable"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_shoe_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shoe_company"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/_8density"
            android:layout_marginEnd="@dimen/_8density"
            android:text="@string/company"
            android:textColor="@color/black"
            android:textSize="@dimen/_18scaleable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_shoe_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

        <TextView
            android:id="@+id/tv_shoe_size"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/_8density"
            android:layout_marginEnd="@dimen/_8density"
            android:text="@string/shoe_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_shoe_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_company" />

        <TextView
            android:id="@+id/tv_shoe_description"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/_8density"
            android:layout_marginEnd="@dimen/_8density"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_shoe_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_size" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
